2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_handle_element_message), (got_time_tick), (bvw_element_msg_sync), 
	(bacon_video_widget_new):
	  Synchroneously handle prepare-xwindow-id element messages that are
	  emitted by xoverlay elements before they create their own window.
	  Should fix any remaining issues of the video window jumping out of
	  its frame.

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_seek_time):
	Use a keyframe seek.

2005-11-27  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_realize), (bacon_video_widget_expose_event):
	Set the bacon video widget background colour to black to 
	help with the nasty grey flashing effect on rapid window
	resizes.
	In the expose handler, bvw_update_interface_implementations 
	might leave us without an xoverlay, in which case we should
	just draw black.
	Hold a reference to the xoverlay while we're exposing.

2005-11-26  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2005-11-26  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/bacon-video-widget-properties.c:
	(bacon_video_widget_properties_update):
	When the current media has a video stream, make sure to show
	the Video section of the property box. (Closes: #322469)

2005-11-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: Patch from Frank Arnold <frank@scirocco-5v-turbo.de>
	to fix the access keys for saturation and hue being mixed up
	Avoid the duplicate use of the 'r' accesskey (Closes: #322228)

2005-11-25  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_update_interface_implementations):
	Hold an extra reference to the xoverlay if we're
	also using it for color balance.

2005-11-25  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/backend/bacon-video-widget-gst-0.10.c: (bvw_bus_message_cb),