@@ -1,3 +1,8 @@
+2005-11-28  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-mozilla-viewer.c: fix compilation with newer versions of
+	D-Bus (Closes: #322436)
+
 2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
